# TUItype

./: Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs
.env/: AGENTS.md
.github/workflows/: main.yml
src/: app.rs  keyboard.rs  main.rs  models.rs  quotes.rs  state.rs  theme.rs
src/core/: metrics.rs  mod.rs  typing_session.rs
src/input/: handler.rs
src/storage/: config.rs  db.rs
src/ui/: history.rs  keyboard.rs  mod.rs  results_view.rs  stats.rs  typing_view.rs
