[package]
name = "TUItype"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.54"
crossterm = "0.29.0"
directories = "6.0.0"
rand = "0.9.2"
ratatui = "0.30.0"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
toml = "0.9.11"
uuid = "1.19.0"
